style.css
/* Fonts */
@font-face {
  font-family: 'Netflix Sans';
  src: url('./assets/fonts/netflix-san/NetflixSans-Medium.ttf');
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: 'Netflix Sans Icon';
  src: url('./assets/fonts/netflix-san/NetflixSans-Icon.ttf');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Netflix Sans';
  src: url('./assets/fonts/netflix-san/NetflixSans-Light.ttf');
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: 'Netflix Sans';
  src: url('./assets/fonts/netflix-san/NetflixSans-Black.ttf');
  font-weight: 900;
  font-style: normal;
}

@font-face {
  font-family: 'Netflix Sans';
  src: url('./assets/fonts/netflix-san/NetflixSans-Bold.ttf');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Netflix Sans';
  src: url('./assets/fonts/netflix-san/NetflixSans-Thin.ttf');
  font-weight: 100;
  font-style: normal;
}

@font-face {
  font-family: 'Netflix Sans';
  src: url('./assets/fonts/netflix-san/NetflixSans-Regular.ttf');
  font-weight: normal;
  font-style: normal;
}

/* CSS Resets */
*,
*::before,
*::after {
    box-sizing: border-box; margin: 0;
    font-family: 'Netflix Sans';
}

html {
    line-height: 1.15;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
    -webkit-tap-highlight-color: transparent;
  }
  
  @-ms-viewport {
    width: device-width;
  }
  
  article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
    display: block;
  }

  select:focus-visible {
    outline: none;
    border: none;
}

/* Variables */
:root {
    /* Netflix Default Palette */
    --white: #fff;
    --clearwhite: rgba(255, 255, 255, 0.3);
    --smokeWhite: #E5E5E5;
    --midgray: rgb(109, 109, 110, 0.3);
    --gray: #808080;
    --black: #141414;
    --red: #B9090B;
    /* Bonus Colors */
    --blue: #007bff;
    --indigo: #6610f2;
    --purple: #6f42c1;
    --pink: #e83e8c;
    --orange: #fd7e14;
    --yellow: #ffc107;
    --green: #28a745;
    --teal: #20c997;
    --cyan: #17a2b8;
    /* Event Colors */
    --primary: #007bff;
    --secondary: #6c757d;
    --success: #28a745;
    --info: #17a2b8;
    --warning: #ffc107;
    --danger: #dc3545;
    --light: #f8f9fa;
    --dark: #343a40;
    /* Device Breakpoints */
    --breakpoint-xs: 0;
    --breakpoint-sm: 576px;
    --breakpoint-md: 768px;
    --breakpoint-lg: 992px;
    --breakpoint-xl: 1200px;
}

/* GENERAL */

html,
body {
    background: var(--black);
    font-family: 'Netflix Sans';
}

h1 {
  color: #fff;
  font-size: 64px;
  font-weight: 400;
  line-height: 81.73px;
}

h3 {
  font-size: 26px;
  font-weight: 500;
  line-height: 33.2px;
  color: var(--smokeWhite);
}

h4 {
  font-size: 26px;
  font-weight: 400;
  line-height: 33.2px;
}

.logo {
  padding: 25px 60px;
}

.index-container{
  width: 70%;
  margin: 10% auto;
  text-align: center;
}

.profile-container {
  margin-top: 2% ;
  display: flex;
  padding: 30px 0 30px 0 ;
  justify-content: space-around;
}

.profile a img {
  max-height: 200px;
  max-width: 200px;
}

.profile h4 {
  text-align: center;
  padding-top: 20px ;
  color: var(--gray);
  font-size: 26px;
  opacity: .65;
}

.btn-profili{
  display: flex;
  justify-content: center;
}

.btn-gestisci-profili {
  padding: 10px 30px;
  font-size: 26px;
  background: transparent;
  border: 1px solid var(--gray);
  color: var(--gray); 
}

@media screen and (max-width:1280px){

  h1{
    font-size: 52px;
  }

  .profile{
    justify-content: center;
    gap:20px;
  }

  .profile a img {
    height: 150px;
    width: 150px;
  }
  
}

@media screen and (max-width: 992px){

  h1{
    font-size: 52px;
  }
  .profile{
    justify-content: center;
    gap:20px;
  }
  .profile a img {
    height: 150px;
    width: 150px;
  }

}

@media screen and (max-width:768px) {
  .logo{
    text-align: center;
  }
  h1{
    display: none;
  }
  .profile-container{
    flex-wrap: wrap;
  }
  .profile{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
  }
  .profile h4 {
    padding: 20px;
  }
}

@media  screen and (max-width: 576px) {

  .logo{
    text-align: center;
  }
  h1{
    display: none;
  }
  .profile-container{
    flex-wrap: wrap;
  }
  .profile{
    flex-basis: 25%;
  }
}
@media screen and (max-width:576px) {
  
}
/* End index page  */


ul{list-style-type: none;}

/* Utilities */

.d-flex{display: flex;}

/* navbar */

.navdesktop{
  width: 100%;  
  align-items: center;
  background: transparent;
}

.navdesktop div:nth-child(2){
  flex-grow: 1;
}

.navdesktop div:last-child img{
  height: 20px;
  width: 20px;
}

ul li a,.dropdown a{
  text-decoration: none;
  color: var(--white);
}

.ul-1,.ul-2{
  gap: 20px;
}

/* dropdown users */

.ul-2{
  position: relative;
}

.dropdown
{
  background: var(--black);
  position: absolute; 
  left: 0;
  top: 50px;
  visibility: hidden;
  width: 170px;
  padding: 16px 0;
}

.licontainer:hover .dropdown{
  visibility: visible;
}

.navdesktop .licontainer li{
  padding: 8px 16px;
}

.navdesktop .licontainer li img{
  margin-right: 8px;
}

.navdesktop .licontainer .dropdown li{
  display: flex;
  width:100%;
  font-size: 14px;
  align-items: center;
}

.dropdown p{
  color: var(--white);
  text-align: center;
  font-size: 14px;
  padding-top: 16px;
}


/* Movie poster */



.movieposter {
  width: 100vw;
  height: 810px;
  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%), url(./assets/img/posters/MoviePoster.png);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
}

.movieinfo-pos{
  width: 636px;
  height: 392px;
  position: absolute;
  top:200px;
  left: 60px;
}

.movieinfo{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 0px;
  gap: 15px;
}

.movieinfo .item1{
  width: 408px;
  height: 115px;
  background-image: url(./assets/img/posters/MovieName.png);
  background-position: bottom center;
  background-size: cover ;
  background-repeat: no-repeat;
}

.movieinfo .item2 p{
    font-size: 30px;
    color: var(--white);
    font-weight: 400;
}

.movieinfo .item2{

  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  width: 408px;
  height: 38px;
  gap: 15px;
}

.movieinfo.item3{
  width: 636px;
  height: 132px;
}
.movieinfo .item3 p {
  font-size: 26px;
  font-weight: 400;
  color: var(--white);
}

.riproduci {
  display: flex;
  justify-content: center;
  gap: 20px;
  width: 433px;
  height: 62px;
}

.play {
  width: 32px;
  height: 32px;
  padding : 5px;
  margin-right: 20px;
}


.btn-riproduci {
  display: flex;
  width: 212px;
  height: 62px;
  background: var(--white);
  border-radius: 4px;
  padding: 15px 30px;
  font-size: 22px;
  font-weight: 500;
  line-height: 28px;
  border: 0;
  align-items: center;
  white-space:nowrap;
}

.btn-info {
  background: var(--clearwhite);
  color: var(--white);
}

.info {
  width: 32px;
  height: 32px;
  padding : 3px;
  margin-right: 20px;
}
/* End Movie poster */


/* Movie Cards Sections */

.movie-section {
  display: flex;
  flex-direction: column;
  padding: 0 60px 0 60px;
  overflow-x: scroll;
  -ms-overflow-style: none;  /* Internet Explorer 10+ */
  scrollbar-width: none;  /* Firefox */
  padding: 30px 60px;
  z-index: 1;
}

/* Hide ScrollBar */
.movie-section::-webkit-scrollbar {
  display: none; /* Safari and Chrome */
}


.poster-container {
  display: flex;
  gap: 5px;
}

.movie-poster {
  padding-top: 10px;
  padding-bottom: 10px;
}

.movie-poster img {
  max-height: 160px;
  max-width: 285px;
  border-radius: 2px;
}

.section-title {
  padding: 0 60px 0 60px;
}


/* End of Movie Cards Sections */

